--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xlmm-console",
+  "name": "zb_back",
   "version": "0.0.0",
   "scripts": {
     "clean": "rimraf dist",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://dev.huyi.so:10080/xiaolumm/xlmm-mall.git"
+    "url": "https://github.com/crackwl8/starfire.git"
   },
   "license": "",
   "devDependencies": {
